<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mousetrap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE not supported by phone</string>
    <string name="ble_supported">BLE supported by phone</string>
    <string name="action_ble_scan">Scan</string>
    <string name="action_ble_scan_stop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Note: data is parsed regardless of whether it makes sense</string>
    <string name="title_activity_flow_pick">FlowPickActivity</string>
    <string name="flow_pick_button_new">Existing Account</string>
    <string name="flow_pick_button_prev_log">Edit Existing Account</string>
    <string name="flow_pick_button_sync">Synchronize</string>
    <string name="flow_pick_button_download_devices">Setup New Account</string>
    <string name="title_activity_log_list">LogListActivity</string>
    <string name="fragment_report_title">Report Summary</string>
    <string name="fragment_report_summary_note">Please confirm that report looks correct before finalization. You cannot modify the log once the report is completed here. Report will be uploaded if or when internet connection is found</string>
    <string name="fragment_report_button_submit_report">Submit Report</string>
    <string name="fragment_report_close_button">Close Log</string>
    <string name="title_activity_upload_log">UploadLogActivity</string>


</resources>
